# PregelR

./: Cargo.toml  LICENSE  Makefile  README.md
examples/: bin_tree.rs  page_rank.rs  sssp.rs  virus.rs
src/: aggregate.rs  channel.rs  combine.rs  context.rs  lib.rs  main.rs  master.rs  message.rs  state.rs  vertex.rs  worker.rs
src/examples/: page_rank.rs  sssp.rs
src/pregel/: aggregate.rs  channel.rs  combine.rs  context.rs  master.rs  message.rs  state.rs  vertex.rs  worker.rs
