[package]
name = "pregel"
version = "0.1.0"
authors = ["Nicky Chen <chenjinlong2016@outlook.com>"]
edition = "2021"

[[example]]
name = "page_rank"
crate-type = ["bin"]

[[example]]
name = "sssp"
crate-type = ["bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
